--- a/src/main/resources/templates/thymeleafEx/thymeleafEx04.html
+++ b/src/main/resources/templates/thymeleafEx/thymeleafEx04.html
@@ -8,7 +8,7 @@
 <h1>상품 리스트 출력 예제</h1>
 
 <table border="1">
-    <th>
+    <thead>
         <tr>
             <td>순번</td>
             <td>상품명</td>
@@ -16,8 +16,8 @@
             <td>가격</td>
             <td>상품 등록일</td>
         </tr>
-    </th>
-    <tb>
+    </thead>
+    <tbody>
         <tr th:each="itemDto, status: ${itemDtoList}">
             <td th:switch="${status.even}">
                 <span th:case="true">짝수</span>
@@ -28,7 +28,8 @@
             <td th:text="${itemDto.price}"></td>
             <td th:text="${itemDto.regTime}"></td>
         </tr>
-    </tb>
+    </tbody>
 </table>
+
 </body>
 </html>
